--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,27 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+  margin: 0;
+  padding: 0;
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
+
+nav {
+  background-color: #bdbbba;
+  text-align: center;
+  position: relative;
+  padding: 1px;
 }
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
+
+ul {
+  font-family: "Helvetica";
+  list-style: none;
 }
+
 a {
-    text-decoration: none;
-    color: #999;
+  color: #030303;
+  text-decoration: none;
+  padding-right: 20px;
 }
+
 a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
+  color: #ffffff;
+  text-decoration: underline;
 }
