--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>{{ page.title }}</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	
-	<body>
-		<nav>
-			<ul>
-				<li>
-					<a href="#">Home</a>
-					<a href="#">Github</a>
-					<a href="#">Resume</a>
-					<a href="#">Coursework</a>
-					<a href="#">Blog</a>
-				</li>
+	<html>
+		<head>
+			<title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
+		</head>
+		<body>
+			<nav>
+	    		<ul>
+	        		<li><a href="/">Home</a></li>
+		        	<li><a href="/declan">Declan</a></li>
+	        		<li><a href="/github">Github</a></li>
+	        		<li><a href="/resume">Resume</a></li>
+				<li><a href="/coursework">Coursework</a></li>
+	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
-		</nav>
-	</body>
-</html>
+			</nav>
+			<div class="container">
+			
+			{{ content }}
+			
+			</div><!-- /.container -->
+			<footer>
+	    		<ul>
+	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+				</ul>
+			</footer>
+		</body>
+	</html>
