--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/declan">Declan</a></li>
-	        		<li><a href="/github">Github</a></li>
-	        		<li><a href="/resume">Resume</a></li>
-				<li><a href="/coursework">Coursework</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:declan@declansullivan.com">email</a></li>
-	        		<li><a href="https://github.com/declansullivan">github.com/declansullivan</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+<html>
+
+<head>
+  <title>{{ page.title }}</title>
+  <!-- link to main stylesheet -->
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/declan">Declan</a></li>
+      <li><a href="/github">Github</a></li>
+      <li><a href="/resume">Resume</a></li>
+      <li><a href="/coursework">Coursework</a></li>
+      <li><a href="/blog">Blog</a></li>
+    </ul>
+  </nav>
+  <div class="container">
+
+    {{ content }}
+
+  </div>
+  <!-- /.container -->
+  <footer>
+    <ul>
+      <li><a href="mailto:declan@declansullivan.com">email</a></li>
+      <li><a href="https://github.com/declansullivan">github.com/declansullivan</a></li>
+    </ul>
+  </footer>
+</body>
+
+</html>
