--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
   <title>{{ page.title }}</title>
   <!-- link to main stylesheet -->
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://github.com/declansullivan/declansullivan.github.io/blob/master/css/main.css">
 </head>
 
 <body>
