--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,16 +9,16 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/declan">Declan</a></li>
-      <li><a href="/github">Github</a></li>
+      <li><a href="/about">About</a></li>
       <li><a href="/resume">Resume</a></li>
       <li><a href="/coursework">Coursework</a></li>
       <li><a href="/blog">Blog</a></li>
+      <li><a href="/github">Github</a></li>
     </ul>
   </nav>
   <div class="container">
 
-    {{ content }}
+    index.html goes here
 
   </div>
   <!-- /.container -->
