--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 body {
+  text-align: center;
   margin: 0;
   padding: 0;
 }
 
 nav {
-  background-color: #bdbbba;
+  background-color: #BED8D4;
   text-align: center;
   position: relative;
   padding: 1px;
@@ -22,10 +23,14 @@ li {
 a {
   color: #030303;
   text-decoration: none;
-  padding-right: 20px;
+  display: block, inline;
+  padding: 17px 20px;
 }
 
 nav ul li a:hover {
-  color: #ffffff;
-  text-decoration: underline;
+  color: #2081C3;
+}
+
+active {
+  background-color: green;  
 }
