--- a/css/main.css
+++ b/css/main.css
@@ -34,3 +34,12 @@ nav ul li a:hover {
 active {
   background-color: green;  
 }
+
+container {
+  background-color: gray;
+  width: 300px;
+  height: 150px;
+  -moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+}
