--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 body {
-  text-align: center;
   margin: 0;
   padding: 0;
 }
@@ -41,4 +40,8 @@ img {
 
 .resume {
   text-align: left;
+}
+
+.main {
+  text-align: center; 
 }
