--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       <li><a href="/resume">Resume</a></li>
       <li><a href="/coursework">Coursework</a></li>
       <li><a href="/blog">Blog</a></li>
-      <li><a href="https://github.com/declansullivan">Github</a></li>
+      <li><a href="https://github.com/declansullivan" target="_blank">Github</a></li>
     </ul>
   </nav>
   <div class="container">
