--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,14 @@ body {
 
 .resume {
   text-align: left;
-  padding-left: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .coursework {
   text-align: left;
-  padding-left: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 nav {
