--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,23 +3,17 @@
 
 <head>
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
-
-<body>
+  
+<header>
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/resume">Resume</a></li>
       <li><a href="/coursework">Coursework</a></li>
-      <li><a href="https://github.com/declansullivan" target="_blank">Github</a></li>
+      <li><a href="/github">Github</a></li>
     </ul>
   </nav>
-  <div class="container">
-
-    {{ content }}
-
-  </div>
-</body>
+</header>
 
 </html>
