--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="/resume">Resume</a></li>
       <li><a href="/coursework">Coursework</a></li>
-      <li><a href="/github">Github</a></li>
+      <li><a href="https://github.com/declansullivan/" target="_blank">Github</a></li>
     </ul>
   </nav>
 </header>
