--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,17 @@
   </nav>
 </header>
   
-<div class="container">{{ content }}</div>
+<body>
+  <div class="container">
+
+    <div class="heading">
+      <h1>{{ page.title }}</h1>
+    </div>
+    
+    {{ content }}
+
+  </div>
+  
+</body>
 
 </html>
