--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <h1>{{ page.title }}</h1>
     </div>
     
-    <div class="imgborder">{{ content }}</div>
+    <div class="centraldiv">{{ content }}</div>
 
   </div>
   
