--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,9 @@ nav ul li {
 }
 
 nav ul li a {
-  padding: 17px 15px;
-  text-decoration: none;
   color: black;
+  text-decoration: none;
+  padding: 17px 15px;
   opacity: 0.9;
 }
 
@@ -24,34 +24,36 @@ nav ul li a:hover {
 }
 
 body {
-  margin: 0 auto;
   font-family: "Helvetica";
   font-style: normal;
   text-align: center;
   text-decoration: none;
+  margin: 0 auto;
 }
 
-/* Home Page CSS */
+/* Home Page CSSs */
 
 .heading {
   z-index: 10;
   position: relative;
   margin: 0 auto;
-  width: 30%;
   top: 15px;
   color: black;
   background: white;
+  width: 30%;
 }
 
 .centraldiv {
   z-index: 9;
   position: relative;
   margin: 0 auto;
-  width: 90%;
   top: -25px;
   border-top-style: solid;
   border-top-width: thin;
+  width: 90%;
 }
+
+/* Homepage CSS */
 
 .home {
   position: relative;
@@ -77,7 +79,29 @@ body {
 
 /* Resume CSS */
 
+.category {
+  position: relative;
+  margin: 0 auto;
+  width: 70%;
+  padding: 50px;
+  font-size: 125%;
+  font-weight: bold;
+}
 
+.list ul {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  list-style-type: none;
+  font-size: 90%;
+  font-weight: normal;
+  line-height: 150%;
+}
+
+.list ul ul {
+  position: relative;
+  left: 40px;
+}
 
 /* Mobile CSS */
 
@@ -135,5 +159,13 @@ body {
   .about {
     width: 100%;
     top: -60px;
+  }
+  
+  .list ul {
+    text-align: center;
+  }
+  
+  .hide {
+    font-size: 0%;
   }
 }
