--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ body {
   text-decoration: none;
 }
 
-/* Resume CSS */
+/* Resume / Coursework CSS */
 
 .category {
   position: relative;
@@ -102,6 +102,34 @@ body {
 .list ul ul {
   position: relative;
   left: 40px;
+}
+
+/* Me CSS */
+
+.me {
+  position: relative;
+  margin: 0 auto;
+  width: 70%;
+  top: 60px;
+}
+
+.moment img {
+  width: 70%;
+}
+
+.moment .content {
+  position: relative;
+  margin: 0 auto;
+  width: 70%;
+  padding: 1px 0 0 0;
+  text-align: left;
+}
+
+.moment h2 {
+  font-size: 115%;
+  padding: 0 0 5px 0;
+  border-bottom-style: solid;
+  border-bottom-width: thin;
 }
 
 /* Mobile CSS */
@@ -168,5 +196,17 @@ body {
   
   .hide {
     font-size: 0%;
+  }
+  
+  .me {
+    width: 100%;
+  }
+  
+  .content h2 {
+    font-size: 80%;
+  }
+  
+  .content p {
+    font-size: 70%;
   }
 }
