--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,12 @@ body {
   top: 60px;
 }
 
-.moment img {
+.imgbox {
+  width: 100%;
+  height: 400px;
+}
+
+.imgbox img {
   width: 70%;
 }
 
@@ -203,6 +208,10 @@ body {
   
   .me {
     width: 100%;
+  }
+  
+  .me hr {
+    width: 80%;
   }
   
   .content h2 {
