--- a/css/main.css
+++ b/css/main.css
@@ -115,12 +115,7 @@ body {
   top: 60px;
 }
 
-.imgbox {
-  width: 100%;
-  height: 400px;
-}
-
-.imgbox img {
+.moment img {
   width: 70%;
 }
 
@@ -208,10 +203,6 @@ body {
   
   .me {
     width: 100%;
-  }
-  
-  .me hr {
-    width: 80%;
   }
   
   .content h2 {
