--- a/_layouts/me.html
+++ b/_layouts/me.html
@@ -32,7 +32,8 @@
         <nav>
           <ul>
             <li><a href="/me">Star Wars</a></li>
-            <li><a href="/me/other">Other</a></li>
+            <li><a href="/me/personal">Personal</a></li>
+            <li><a href="/me/blog">Blog</a></li>
           </ul>
         </nav>
       </div>
