--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -14,7 +14,7 @@
       <li><a href="/resume">Resume</a></li>
       <li><a href="/coursework">Coursework</a></li>
       <li><a href="https://github.com/declansullivan/" target="_blank">Github</a></li>
-      <li><a href="/me">Me</a></li>
+      <li><a href="/about">Me</a></li>
     </ul>
   </nav>
 </header>
@@ -31,9 +31,9 @@
       <div class="secondnav">
         <nav>
           <ul>
-            <li><a href="/me">Star Wars</a></li>
-            <li><a href="/me/personal">Personal</a></li>
-            <li><a href="/me/blog">Blog</a></li>
+            <li><a href="/about">Star Wars</a></li>
+            <li><a href="/about/personal">Personal</a></li>
+            <li><a href="/about/blog">Blog</a></li>
           </ul>
         </nav>
       </div>
