--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 ---
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
 <body>
 
@@ -17,3 +24,5 @@ layout: default
 {{ content }}
   
 </body>
+
+</html>
