--- a/css/main.css
+++ b/css/main.css
@@ -127,15 +127,17 @@ body {
   top: 20px;
 }
 
-.moment img {
-  padding: 5px 0 0 0;
-  width: 70%;
-}
-
-.moment .content {
+.moment {
   position: relative;
   margin: 0 auto;
   width: 70%;
+}
+
+.moment img {
+  padding: 5px 0 0 0;
+}
+
+.moment .content {
   padding: 1px 0 0 0;
   text-align: left;
   line-height: 150%;
