--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,1 +1,22 @@
+---
+layout: about
+---
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
+<body>
+  
+  <div class="post">
+
+    {{ content }}
+    
+  </div>
+  
+</body>
+
+</html>
