--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{ page.title }}</title>
+  <title>{{ page.tab_title }}</title>
   <meta name="declan's site" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/main.css">
 </head>
