--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -14,7 +14,7 @@ layout: default
 <div class="secondnav">
   <nav>
     <ul>
-      <li><a href="/about">Star Wars</a></li>
+      <li><a href="/about/starwars">Star Wars</a></li>
       <li><a href="/about/personal">Personal</a></li>
       <li><a href="/about/blog">Blog</a></li>
     </ul>
