--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       <li><a href="/resume">Resume</a></li>
       <li><a href="/coursework">Coursework</a></li>
       <li><a href="https://github.com/declansullivan/" target="_blank">Github</a></li>
-      <li><a href="/about">About</a></li>
+      <li><a href="/about/about">About</a></li>
     </ul>
   </nav>
 </header>
