--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,15 @@ body {
   left: 40px;
 }
 
+.category a {
+  color: #A3ABB0;
+  text-decoration: none;
+}
+
+.category a:hover {
+  color: #525658;
+}
+
 /* Me CSS */
 
 .secondnav {
