--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,12 @@ body {
   line-height: 150%;
 }
 
+.moment h1 {
+  position: relative;
+  margin: 0 auto;
+  font-size: 80%;
+}
+
 .moment h2 {
   font-size: 115%;
   padding: 0 0 5px 0;
