--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+  
   <title>{{ page.tab_title }}</title>
   <meta name="declan's site" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/css/favicon_declan.ico">
 </head>
   
 <header>
